PCHR-1433: Fix datepicker icon z-index

--- a/scss/civicrm/vacancies/_vacancies.scss
+++ b/scss/civicrm/vacancies/_vacancies.scss
@@ -91,7 +91,7 @@
           left: 338px;
           top: 1px;
           color: $brand-primary;
-          z-index: 201;
+          z-index: 91;
         }
 
         &:before {
@@ -103,7 +103,7 @@
           height: 28px;
           border: 1px solid $crm-copy;
           background: $crm-accordion-header-color;
-          z-index: 200;
+          z-index: 90;
         }
       }
 
